swagger: password generate
